Removed previous waybar config

--- a/.config/polybar/colors.ini
+++ b/.config/polybar/colors.ini
@@ -1,20 +1,20 @@
 [colors]
-# background = #000010
+# background = #1B1A18
 background = #44000000
-foreground = #F5F3FE
-color0 = #010012
-color1 = #333966
-color2 = #325585
-color3 = #5A5D83
-color4 = #7A72A5
-color5 = #8A88A6
-color6 = #AAA5BD
-color7 = #E8E5F5
-color8 = #A2A0AC
-color9 = #444D88
-color10 = #4272B1
-color11 = #787CAE
-color12 = #A398DC
-color13 = #B8B6DD
-color14 = #E2DCFC
-color15 = #E8E5F5
+foreground = #F5DAD7
+color0 = #42403F
+color1 = #16130D
+color2 = #18130F
+color3 = #311925
+color4 = #351A28
+color5 = #733841
+color6 = #AA7069
+color7 = #E8C2BD
+color8 = #A28884
+color9 = #1E1912
+color10 = #211A14
+color11 = #422231
+color12 = #472336
+color13 = #994B57
+color14 = #E2968C
+color15 = #E8C2BD
