Added kitty & picom configs

--- a/.config/polybar/colors.ini
+++ b/.config/polybar/colors.ini
@@ -1,20 +1,20 @@
 [colors]
-# background = #1B1A18
+# background = #1B1A1F
 background = #44000000
-foreground = #F5DAD7
-color0 = #42403F
-color1 = #16130D
-color2 = #18130F
-color3 = #311925
-color4 = #351A28
-color5 = #733841
-color6 = #AA7069
-color7 = #E8C2BD
-color8 = #A28884
-color9 = #1E1912
-color10 = #211A14
-color11 = #422231
-color12 = #472336
-color13 = #994B57
-color14 = #E2968C
-color15 = #E8C2BD
+foreground = #F2C9C7
+color0 = #424147
+color1 = #5A3141
+color2 = #7A3E48
+color3 = #9A4B50
+color4 = #BA5758
+color5 = #DA6460
+color6 = #DA6460
+color7 = #E4A9A7
+color8 = #A07675
+color9 = #5A3141
+color10 = #7A3E48
+color11 = #9A4B50
+color12 = #BA5758
+color13 = #DA6460
+color14 = #DA6460
+color15 = #E4A9A7
