--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -2,14 +2,15 @@
 type = internal/tray
 
 tray-padding = 6
-tray-background = ${colors.color3}
-format-background = ${colors.color3}
+tray-background = ${colors.color1}
+format-background = ${colors.color1}
 
 [module/polybar-text-1]
 type = custom/script
 exec = ~/.config/polybar/scripts/codeforces_rating_api.py 1500 1800
 label = %{T1} %{T-}Expert: %output%
-format-background = ${colors.color5}
+; label = %{T1} %{T-}1500-1800: %output%
+format-background = ${colors.color3}
 format-foreground = ${colors.foreground}
 label-margin=1pt
 interval = 60
@@ -19,7 +20,8 @@ interval = 60
 type = custom/script
 exec = ~/.config/polybar/scripts/codeforces_rating_api.py 1900 2000
 label = %{T1} %{T-}Candidate Master: %output%
-format-background = ${colors.color4}
+; label = %{T1} %{T-}1900-2000: %output%
+format-background = ${colors.color2}
 format-foreground = ${colors.foreground}
 interval = 60
 
@@ -27,7 +29,8 @@ interval = 60
 type = custom/script
 exec = ~/.config/polybar/scripts/codeforces_rating_api.py 2100 2300
 label = %{T1} %{T-}Master: %output%
-format-background = ${colors.color3}
+; label = %{T1} %{T-}2100-2300: %output%
+format-background = ${colors.color1}
 format-foreground = ${colors.foreground}
 interval = 60
 
@@ -38,7 +41,7 @@ interval = 1
 time = "%I:%M %p"
 
 format = <label>
-format-background = ${colors.color5}
+format-background = ${colors.color3}
 format-foreground = ${colors.foreground}
 format-padding = 1
 label = %time%
@@ -51,7 +54,7 @@ time = "%b %d"
 
 ; time = "%H:%M"
 format = <label>
-format-background = ${colors.color5}
+format-background = ${colors.color3}
 format-foreground = ${colors.foreground}
 format-padding = 1
 label = %time%
@@ -64,24 +67,25 @@ time = "%a"
 ; time = "%H:%M"
 
 format = <label>
-format-background = ${colors.color5}
+format-background = ${colors.color3}
 format-foreground = ${colors.foreground}
 format-padding = 1
 label = %time%
+
 [module/i3]
 type = internal/i3
 index-sort = true
 
 format = <label-state> <label-mode>
-format-background=${colors.color4}
+format-background=${colors.color3}
 
 label-mode = %mode%
 label-mode-padding = 1
-label-mode-background = ${colors.color4}
+label-mode-background = ${colors.color2}
 
 ; ws-icon-0 = 1;A
 
-label-focused = 
+label-focused = ""
 label-focused-foreground = ${colors.foreground}
 label-focused-padding = 1
 
@@ -110,8 +114,8 @@ format-volume-prefix = "󰋋 "
 format-volume-prefix-foreground = ${colors.foreground}
 format-volume = <label-volume>
 format-volume-suffix= " "
-format-volume-background= ${colors.color4}
-format-muted-background= ${colors.color4}
+format-volume-background= ${colors.color2}
+format-muted-background= ${colors.color2}
 
 label-volume = %percentage%%
 
@@ -122,28 +126,28 @@ label-muted-foreground = ${colors.foreground}
 type = custom/text
 
 content = %{T6}%{T-}
-content-foreground = ${colors.color5}
-content-background= ${colors.color4}
+content-foreground = ${colors.color3}
+content-background= ${colors.color2}
 
 [module/triangle-left-right-second]
 type = custom/text
 
 content = %{T6}%{T-}
-content-foreground = ${colors.color4}
-content-background= ${colors.color3}
+content-foreground = ${colors.color2}
+content-background= ${colors.color1}
 
 [module/triangle-left-right-third]
 type = custom/text
 
 content = %{T6}%{T-}
-content-foreground = ${colors.color3}
+content-foreground = ${colors.color1}
 
 [module/triangle-mid-left]
 type = custom/text
 
 ; 
 content = %{T6}%{T-}
-content-foreground = ${colors.color4}
+content-foreground = ${colors.color3}
 content-background= ${colors.background}
 
 [module/triangle-mid-right]
@@ -151,7 +155,7 @@ type = custom/text
 
 ; 
 content = %{T6}%{T-}
-content-foreground = ${colors.color4}
+content-foreground = ${colors.color3}
 content-background= ${colors.background}
 
 
@@ -159,25 +163,25 @@ content-background= ${colors.background}
 type = custom/text
 
 content = %{T6}%{T-}
-content-foreground = ${colors.color3}
+content-foreground = ${colors.color1}
 
 [module/triangle-right-left-second]
 type = custom/text
 
 content = %{T6}%{T-}
-content-foreground = ${colors.color4}
-content-background= ${colors.color3}
+content-foreground = ${colors.color2}
+content-background= ${colors.color1}
 
 [module/triangle-right-left-third]
 type = custom/text
 
 content = %{T6}%{T-}
-content-foreground = ${colors.color5}
-content-background= ${colors.color4}
+content-foreground = ${colors.color3}
+content-background= ${colors.color2}
 
 [module/soft-right-left]
 type = custom/text
 
 content = %{T6}%{T-}
-content-foreground = ${colors.color6}
-content-background= ${colors.color5}
+content-foreground = ${colors.color4}
+content-background= ${colors.color3}
