--- a/.config/wallust/wallust.toml
+++ b/.config/wallust/wallust.toml
@@ -1,6 +1,6 @@
 # wallust 3.0 beta.*
 
-backend = "kmeans"
+backend = "wal"
 color_space = "lab"
 
 # NOTE: All filters will fill 16 colors (from color0 to color15), 16 color
@@ -17,7 +17,7 @@ color_space = "lab"
 #  * softdark16  - softdark with 16 color variation
 #  * softlight   - Light with soft pastel colors, counterpart of `harddark`
 #  * softlight16 - softlight with 16 color variation
-palette = "dark16"
+palette = "dark"
 
 # Difference between similar colors, used by the colorspace:
 #  1          Not perceptible by human eyes.
@@ -25,7 +25,7 @@ palette = "dark16"
 #  2 - 10     Perceptible at a glance.
 #  11 - 49    Colors are more similar than opposite
 #  100        Colors are exact opposite
-threshold = 10
+threshold = 21
 
 [templates]
 # cava.template = 'colors-cava'
