Moved systray and pulseaudio in polybar

--- a/.config/polybar/colors.ini
+++ b/.config/polybar/colors.ini
@@ -1,20 +1,21 @@
 [colors]
-# background = #1B1A1F
-background = #44000000
-foreground = #F2C9C7
-color0 = #424147
-color1 = #5A3141
-color2 = #7A3E48
-color3 = #9A4B50
-color4 = #BA5758
-color5 = #DA6460
-color6 = #DA6460
-color7 = #E4A9A7
-color8 = #A07675
-color9 = #5A3141
-color10 = #7A3E48
-color11 = #9A4B50
-color12 = #BA5758
-color13 = #DA6460
-color14 = #DA6460
-color15 = #E4A9A7
+# background = #151515
+# background = #44000000
+background = #00000000
+foreground = #F0DACD
+color0 = #3D3C3C
+color1 = #554033
+color2 = #745542
+color3 = #946A51
+color4 = #B38061
+color5 = #D39570
+color6 = #D39570
+color7 = #E1C2AF
+color8 = #9D877B
+color9 = #554033
+color10 = #745542
+color11 = #946A51
+color12 = #B38061
+color13 = #D39570
+color14 = #D39570
+color15 = #E1C2AF
