--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -2,8 +2,8 @@
 type = internal/tray
 
 tray-padding = 6
-tray-background = ${colors.color1}
-format-background = ${colors.color1}
+tray-background = ${colors.color3}
+format-background = ${colors.color3}
 
 [module/polybar-text-1]
 type = custom/script
@@ -41,7 +41,7 @@ interval = 1
 time = "%I:%M %p"
 
 format = <label>
-format-background = ${colors.color3}
+format-background = ${colors.color2}
 format-foreground = ${colors.foreground}
 format-padding = 1
 label = %time%
@@ -54,7 +54,7 @@ time = "%b %d"
 
 ; time = "%H:%M"
 format = <label>
-format-background = ${colors.color3}
+format-background = ${colors.color2}
 format-foreground = ${colors.foreground}
 format-padding = 1
 label = %time%
@@ -67,7 +67,7 @@ time = "%a"
 ; time = "%H:%M"
 
 format = <label>
-format-background = ${colors.color3}
+format-background = ${colors.color2}
 format-foreground = ${colors.foreground}
 format-padding = 1
 label = %time%
@@ -85,7 +85,7 @@ label-mode-background = ${colors.color2}
 
 ; ws-icon-0 = 1;A
 
-label-focused = ""
+label-focused = 
 label-focused-foreground = ${colors.foreground}
 label-focused-padding = 1
 
@@ -114,8 +114,8 @@ format-volume-prefix = "󰋋 "
 format-volume-prefix-foreground = ${colors.foreground}
 format-volume = <label-volume>
 format-volume-suffix= " "
-format-volume-background= ${colors.color2}
-format-muted-background= ${colors.color2}
+format-volume-background= ${colors.color1}
+format-muted-background= ${colors.color1}
 
 label-volume = %percentage%%
 
@@ -184,4 +184,4 @@ type = custom/text
 
 content = %{T6}%{T-}
 content-foreground = ${colors.color4}
-content-background= ${colors.color3}
+content-background= ${colors.color2}
