--- a/.config/wallust/templates/colors-polybar.conf
+++ b/.config/wallust/templates/colors-polybar.conf
@@ -1,6 +1,7 @@
 [colors]
 # background = {{background}}
-background = #44000000
+# background = #44000000
+background = #00000000
 foreground = {{foreground}}
 color0 = {{color0}}
 color1 = {{color1}}
