--- a/.config/polybar/colors.ini
+++ b/.config/polybar/colors.ini
@@ -1,21 +1,21 @@
 [colors]
-# background = #151515
+# background = #1D1715
 # background = #44000000
 background = #00000000
-foreground = #F0DACD
-color0 = #3D3C3C
-color1 = #554033
-color2 = #745542
-color3 = #946A51
-color4 = #B38061
-color5 = #D39570
-color6 = #D39570
-color7 = #E1C2AF
-color8 = #9D877B
-color9 = #554033
-color10 = #745542
-color11 = #946A51
-color12 = #B38061
-color13 = #D39570
-color14 = #D39570
-color15 = #E1C2AF
+foreground = #F8CCA6
+color0 = #443D3B
+color1 = #6C2F01
+color2 = #8C3F00
+color3 = #AC4F00
+color4 = #CC5E00
+color5 = #EC6E00
+color6 = #EC6E00
+color7 = #EDAE77
+color8 = #A67A53
+color9 = #6C2F01
+color10 = #8C3F00
+color11 = #AC4F00
+color12 = #CC5E00
+color13 = #EC6E00
+color14 = #EC6E00
+color15 = #EDAE77
