--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -94,7 +94,7 @@ frame-opacity = 0.7;
 # `transparent-clipping`.
 #
 # Default: 0 (disabled)
-corner-radius = 0
+corner-radius = 10;
 
 #################################
 #            Blur               #
@@ -311,11 +311,18 @@ rules: ({
   match = "class_g = 'Polybar'"
   shadow=false;
 }, {
-  match = "class_g = 'Rofi'"
+  match = "class_g = 'Rofi' || class_g = 'Drun'"
   shadow=false;
   blur-background = true;
-  blur-strength = 10
-})
+  blur-strength = 10;
+  corner-radius = 12;
+},{
+  match = "class_g = 'kitty'"
+  shadow=false;
+  blur-background = false;
+  # corner-radius = 12;
+}
+)
 
 # `@include` directive can be used to include additional configuration files.
 # Relative paths are search either in the parent of this configuration file
