--- a/.config/wallust/wallust.toml
+++ b/.config/wallust/wallust.toml
@@ -53,6 +53,9 @@ polybar.template = 'colors-polybar.conf'
 polybar.target = '~/.config/polybar/colors.ini'
 polybar.new_engine = true
 
+rofi.template = 'colors-rofi.rasi'
+rofi.target = '~/.config/rofi/colors.rasi'
+rofi.new_engine = true
 #swaync.template = 'colors-swaync.css'
 #swaync.target = '~/.config/swaync/wallust/colors-wallust.css'
 
