Removed some wallpapers, added qt5ct envvar

--- a/.config/polybar/colors.ini
+++ b/.config/polybar/colors.ini
@@ -1,21 +1,21 @@
 [colors]
-# background = #1D1715
+# background = #1C1C1F
 # background = #44000000
 background = #00000000
-foreground = #F8CCA6
-color0 = #443D3B
-color1 = #6C2F01
-color2 = #8C3F00
-color3 = #AC4F00
-color4 = #CC5E00
-color5 = #EC6E00
-color6 = #EC6E00
-color7 = #EDAE77
-color8 = #A67A53
-color9 = #6C2F01
-color10 = #8C3F00
-color11 = #AC4F00
-color12 = #CC5E00
-color13 = #EC6E00
-color14 = #EC6E00
-color15 = #EDAE77
+foreground = #F1CCCC
+color0 = #434345
+color1 = #59373E
+color2 = #78454A
+color3 = #975256
+color4 = #B76061
+color5 = #D66D6D
+color6 = #D66D6D
+color7 = #E2AEAE
+color8 = #9E7979
+color9 = #59373E
+color10 = #78454A
+color11 = #975256
+color12 = #B76061
+color13 = #D66D6D
+color14 = #D66D6D
+color15 = #E2AEAE
