Added .xinitrc and some wallpapers

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,3 +2,7 @@ font_family      JetBrainsMono Nerd Font
 font_size 12.0
 enable_audio_bell false
 background_opacity 0.6
+window_margin_width 5
+text_gamma_adjustment 1.7
+text_contrast 30
+text_composition_strategy legacy
