--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -55,16 +55,16 @@ shadow-offset-y = -7;
 fading = true;
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
-fade-in-step = 0.03;
+fade-in-step = 0.04;
 
 # Opacity change between steps while fading out. (0.01 - 1.0, defaults to 0.03)
-fade-out-step = 0.03;
+fade-out-step = 0.04;
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
 # fade-delta = 10
 
 # Do not fade on window open/close.
-# no-fading-openclose = false
+# no-fading-openclose =true
 
 # Do not fade destroyed ARGB windows with WM frame. Workaround of bugs in Openbox, Fluxbox, etc.
 # no-fading-destroyed-argb = false
@@ -102,7 +102,7 @@ corner-radius = 10;
 
 # Parameters for background blurring, see BLUR section in the man page for more information.
 blur-method = "dual_kawase"
-#blur-size = 12
+blur-size = 2
 #
 # blur-deviation = false
 #
@@ -155,12 +155,12 @@ backend = "glx"
 # Use higher precision during rendering, and apply dither when presenting the
 # rendered screen. Reduces banding artifacts, but may cause performance
 # degradation. Only works with OpenGL.
-dithered-present = false;
+# dithered-present = true;
 
 # Enable/disable VSync.
 #
 # Default: false
-vsync = true;
+# vsync = true;
 
 # Try to detect windows with rounded corners and don't consider them
 # shaped windows. The accuracy is not very high, unfortunately.
@@ -319,8 +319,12 @@ rules: ({
 },{
   match = "class_g = 'kitty'"
   shadow=false;
-  blur-background = false;
+  # blur-background = true;
+  # blur-strength = 1;
   # corner-radius = 12;
+},{
+  match = "fullscreen";
+  corner-radius= 0;
 }
 )
 
