--- a/.config/polybar/colors.ini
+++ b/.config/polybar/colors.ini
@@ -1,21 +1,21 @@
 [colors]
-# background = #1C1C1F
+# background = #242225
 # background = #44000000
 background = #00000000
-foreground = #F1CCCC
-color0 = #434345
-color1 = #59373E
-color2 = #78454A
-color3 = #975256
-color4 = #B76061
-color5 = #D66D6D
-color6 = #D66D6D
-color7 = #E2AEAE
-color8 = #9E7979
-color9 = #59373E
-color10 = #78454A
-color11 = #975256
-color12 = #B76061
-color13 = #D66D6D
-color14 = #D66D6D
-color15 = #E2AEAE
+foreground = #F6D9CE
+color0 = #4A484B
+color1 = #684545
+color2 = #875951
+color3 = #A76C5D
+color4 = #C67F68
+color5 = #E69274
+color6 = #E69274
+color7 = #EAC0B1
+color8 = #A4867C
+color9 = #684545
+color10 = #875951
+color11 = #A76C5D
+color12 = #C67F68
+color13 = #E69274
+color14 = #E69274
+color15 = #EAC0B1
