--- a/.config/polybar/colors.ini
+++ b/.config/polybar/colors.ini
@@ -1,21 +1,21 @@
 [colors]
-# background = #242225
+# background = #1F1D1D
 # background = #44000000
 background = #00000000
-foreground = #F6D9CE
-color0 = #4A484B
-color1 = #684545
-color2 = #875951
-color3 = #A76C5D
-color4 = #C67F68
-color5 = #E69274
-color6 = #E69274
-color7 = #EAC0B1
-color8 = #A4867C
-color9 = #684545
-color10 = #875951
-color11 = #A76C5D
-color12 = #C67F68
-color13 = #E69274
-color14 = #E69274
-color15 = #EAC0B1
+foreground = #F1DCCA
+color0 = #454444
+color1 = #5F4636
+color2 = #7D5B42
+color3 = #9C714F
+color4 = #BA865C
+color5 = #D89B69
+color6 = #D89B69
+color7 = #E3C5AC
+color8 = #9F8A78
+color9 = #5F4636
+color10 = #7D5B42
+color11 = #9C714F
+color12 = #BA865C
+color13 = #D89B69
+color14 = #D89B69
+color15 = #E3C5AC
