--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -23,6 +23,9 @@ scroll-down = prev
 background = ${colors.background}
 foreground = ${colors.foreground}
 
+[global/wm]
+margin-top = 5
+
 
 [settings]
 screenchange-reload = true
