--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -5,9 +5,19 @@ tray-padding = 6
 tray-background = ${colors.color3}
 format-background = ${colors.color3}
 
+[module/counter]
+type = custom/script
+exec = ~/.config/polybar/scripts/codeforces_points.py
+label = %{T1} %{T-}%output%/15
+; label = %{T1} %{T-}1500-1800: %output%
+format-background = ${colors.color3}
+format-foreground = ${colors.foreground}
+label-margin=1pt
+interval = 60
+
 [module/polybar-text-1]
 type = custom/script
-exec = ~/.config/polybar/scripts/codeforces_rating_api.py 1500 1800
+exec = ~/.config/polybar/scripts/codeforces_rating_api.py 1500 1899
 label = %{T1} %{T-}Expert: %output%
 ; label = %{T1} %{T-}1500-1800: %output%
 format-background = ${colors.color3}
@@ -98,7 +108,7 @@ label-visible= %icon%
 label-visible-foreground = ${colors.foreground}
 label-visible-padding = 1
 
-label-urgent= -!-
+label-urgent= 󰀨
 label-urgent-foreground = ${colors.foreground}
 label-urgent-padding = 1
 
