--- a/.config/polybar/colors.ini
+++ b/.config/polybar/colors.ini
@@ -1,21 +1,21 @@
 [colors]
-# background = #1F1D1D
+# background = #292330
 # background = #44000000
 background = #00000000
-foreground = #F1DCCA
-color0 = #454444
-color1 = #5F4636
-color2 = #7D5B42
-color3 = #9C714F
-color4 = #BA865C
-color5 = #D89B69
-color6 = #D89B69
-color7 = #E3C5AC
-color8 = #9F8A78
-color9 = #5F4636
-color10 = #7D5B42
-color11 = #9C714F
-color12 = #BA865C
-color13 = #D89B69
-color14 = #D89B69
-color15 = #E3C5AC
+foreground = #FADAC8
+color0 = #4F4857
+color1 = #703F5D
+color2 = #90555E
+color3 = #B06B5F
+color4 = #D08060
+color5 = #F09661
+color6 = #F09661
+color7 = #EFC2A8
+color8 = #A78875
+color9 = #703F5D
+color10 = #90555E
+color11 = #B06B5F
+color12 = #D08060
+color13 = #F09661
+color14 = #F09661
+color15 = #EFC2A8
