--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -11,7 +11,7 @@ include-file = $HOME/.config/polybar/fonts.ini
 width = 100%
 height = 25
 override-redirect = false
-modules-left = polybar-text-1 triangle-left-right-first polybar-text-2 triangle-left-right-second polybar-text-3 triangle-left-right-third
+modules-left = counter polybar-text-1 triangle-left-right-first polybar-text-2 triangle-left-right-second polybar-text-3 triangle-left-right-third
 modules-center = triangle-mid-left i3 triangle-mid-right
 modules-right = triangle-right-left-first pulseaudio triangle-right-left-second day soft-right-left date soft-right-left time triangle-right-left-third systray 
 fixed-center = true
