Changed polybar codeforces rating range

--- a/.config/polybar/colors.ini
+++ b/.config/polybar/colors.ini
@@ -1,21 +1,21 @@
 [colors]
-# background = #292330
+# background = #211D1D
 # background = #44000000
 background = #00000000
-foreground = #FADAC8
-color0 = #4F4857
-color1 = #703F5D
-color2 = #90555E
-color3 = #B06B5F
-color4 = #D08060
-color5 = #F09661
-color6 = #F09661
-color7 = #EFC2A8
-color8 = #A78875
-color9 = #703F5D
-color10 = #90555E
-color11 = #B06B5F
-color12 = #D08060
-color13 = #F09661
-color14 = #F09661
-color15 = #EFC2A8
+foreground = #F6DEC6
+color0 = #484343
+color1 = #69462F
+color2 = #885D3A
+color3 = #A87445
+color4 = #C78A50
+color5 = #E6A15B
+color6 = #E6A15B
+color7 = #EAC8A4
+color8 = #A48C73
+color9 = #69462F
+color10 = #885D3A
+color11 = #A87445
+color12 = #C78A50
+color13 = #E6A15B
+color14 = #E6A15B
+color15 = #EAC8A4
